adding effects to main page

--- a/app/assets/less/modules/body/main.less
+++ b/app/assets/less/modules/body/main.less
@@ -1,7 +1,3 @@
 body {
-  background: url('../images/bg1.jpg') no-repeat top center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	overflow-x: hidden;
 }
