--- a/app/assets/less/modules/navbar/main.less
+++ b/app/assets/less/modules/navbar/main.less
@@ -1,5 +1,7 @@
 div.navbar-container {
-  margin-top: 80px;
+	position: fixed;
+	width: 100%;
+	top: 50px;
   a.navbar-brand {
     h3 {
       margin: 0px;
