--- a/app/assets/javascripts/templates/navbar/index.html
+++ b/app/assets/javascripts/templates/navbar/index.html
@@ -1,21 +1,23 @@
-<nav class="navbar navbar-inverse" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">
-      <h3>Express dažymas</h3>
-    </a>
-  </div>
-
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
-      <li><a class='active' href="#">Apie mus</a></li>
-      <li><a href="#">Užklausa</a></li>
-      <li><a href="#">Kontaktai</a></li>
-    </ul>
-  </div>
-</nav>
+<div class='container'>
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">
+        <h3>Express dažymas</h3>
+      </a>
+    </div>
+  
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav">
+        <li><a class='active' href="#">Apie mus</a></li>
+        <li><a href="#">Užklausa</a></li>
+        <li><a href="#">Kontaktai</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
