--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,10 +3,11 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/main.css' />
   </head>
-  <body  data-0="background-image:linear-gradient(0deg, hsl(0, 100%, 50%), hsl(40, 50%, 50%));" data-2000="background-image:linear-gradient(3600deg, hsl(360, 100%, 50%), hsl(400, 100%, 50%));">
+  <body  data-0="background-image:linear-gradient(0deg, hsl(0, 70%, 30%), hsl(40, 30%, 30%));" data-2000="background-image:linear-gradient(3600deg, hsl(360, 70%, 30%), hsl(400, 70%, 30%));">
     <div class='content'></div>
     <script data-main='javascripts/main' src='javascripts/require.js'></script>
   </body>
