--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -833,6 +833,6 @@ th.hidden-lg,td.hidden-lg{display:table-cell !important}
 @media (min-width:1200px){.hidden-lg{display:none !important}tr.hidden-lg{display:none !important} th.hidden-lg,td.hidden-lg{display:none !important}}
 .visible-print{display:none !important}tr.visible-print{display:none !important}
 th.visible-print,td.visible-print{display:none !important}
-@media print{.visible-print{display:block !important}tr.visible-print{display:table-row !important} th.visible-print,td.visible-print{display:table-cell !important} .hidden-print{display:none !important}tr.hidden-print{display:none !important} th.hidden-print,td.hidden-print{display:none !important}}body{overflow-x:hidden}
+@media print{.visible-print{display:block !important}tr.visible-print{display:table-row !important} th.visible-print,td.visible-print{display:table-cell !important} .hidden-print{display:none !important}tr.hidden-print{display:none !important} th.hidden-print,td.hidden-print{display:none !important}}body{background:#000}body img{position:fixed;top:0px;left:0px}body img.car-body{z-index:1}
 div.navbar-container{position:fixed;width:100%;top:50px}div.navbar-container a.navbar-brand h3{margin:0px}
 div.navbar-container .navbar-nav>li>a{padding:21px 25px 16px 25px}
