--- a/app/assets/less/modules/body/main.less
+++ b/app/assets/less/modules/body/main.less
@@ -1,3 +1,11 @@
 body {
-	overflow-x: hidden;
+	background: #000;
+	img {
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		&.car-body {
+		  z-index: 1;
+		}
+	}
 }
