--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,8 +7,10 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/main.css' />
   </head>
-  <body  data-0="background-image:linear-gradient(0deg, hsl(0, 70%, 30%), hsl(40, 30%, 30%));" data-2000="background-image:linear-gradient(3600deg, hsl(360, 70%, 30%), hsl(400, 70%, 30%));">
-    <div class='content'></div>
+  <body>
+	<img src='images/garage.jpg' class='img-responsive'/>
+	<img src='images/body.png' class='car-body img-responsive' data-0='-webkit-filter: hue-rotate(0deg);' data-2000='-webkit-filter: hue-rotate(1000deg);'/>  
+	<div class='content'></div>
     <script data-main='javascripts/main' src='javascripts/require.js'></script>
   </body>
 </html>
