one more option for bg

--- a/app/assets/less/modules/body/main.less
+++ b/app/assets/less/modules/body/main.less
@@ -1,11 +1,14 @@
 body {
 	background: #000;
-	img {
+	img.garage, img.car-body {
 		position: fixed;
 		top: 0px;
 		left: 0px;
-		&.car-body {
-		  z-index: 1;
-		}
+	}
+	img.garage {
+		z-index: -2;
+	}
+	img.car-body {
+		z-index: -1;
 	}
 }
