--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='/stylesheets/main.css' />
   </head>
   <body>
-	<img src='images/garage.jpg' class='img-responsive'/>
+	<img src='images/garage.jpg' class='img-responsive garage'/>
 	<img src='images/body.png' class='car-body img-responsive' data-0='-webkit-filter: hue-rotate(0deg);' data-2000='-webkit-filter: hue-rotate(1000deg);'/>  
 	<div class='content'></div>
     <script data-main='javascripts/main' src='javascripts/require.js'></script>
