--- a/app/assets/less/modules/navbar/main.less
+++ b/app/assets/less/modules/navbar/main.less
@@ -1,13 +1,10 @@
 div.navbar-container {
-	position: fixed;
-	width: 100%;
-	top: 50px;
-  a.navbar-brand {
-    h3 {
-      margin: 0px;
-    }
-  }
-  .navbar-nav > li > a {
-    padding: 21px 25px 16px 25px;
-  }
+	img.logo {
+		margin: 10px 0 0 20px;		
+		display: block;
+	}
+	hr {
+		margin: 0 0 10px 0;
+	  border-top: 2px solid #5adeff;	
+	}
 }
